--- a/src/styles/_main-view.scss
+++ b/src/styles/_main-view.scss
@@ -4,12 +4,25 @@
   flex-grow: 1;
   
   > * {
-    background-color: darken($base-color, 20);
+    background-color: darken($base-color, 15);
     margin: 10px;
   }
   
   #stage {
     flex-grow: 3;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    align-content: flex-start; 
+    
+    .stage-item {
+      
+      padding: 5px;
+      margin: 5px;
+      width: 40px;
+      height: 60px;
+      background-color: darken($base-color, 20);
+    }
   }
   
   #stage-filters {
